--- a/arbil/src/main/resources/release_notes.txt
+++ b/arbil/src/main/resources/release_notes.txt
@@ -157,6 +157,9 @@ table, which used to be the case though confusing. (#1014)
 - LOCAL CORPUS: It used to be impossible to drag nodes onto the local corpus (root) node that could 
 be imported into it. Now this is possible. (#1019)
 
+- SIGN LANGUAGE TEMPLATE: The Sign Language template for IMDI was not in sync with the changes in the
+default IMDI template. It is now up-to-date. (#1368)
+
 ** KNOWN ISSUES **
 
 Among others, the following issues have been described and will be addressed in future version of
@@ -167,6 +170,10 @@ imported into the local corpus since the authentication mechanism is broken. (#6
 
 - SHOW IMDI FORMATTED: When showing an IMDI metadata file 'IMDI formatted', the formatting does
 not look as expected. (#899)
+
+- SAVING TO DISK: In particular (rare) instances, saving the XML to disk fails and results in an
+empty document. This is due to a bug in one of the used libraries, which will be updated in a 
+future release of Arbil.  (#1431)
 
 - PERFORMANCE: After importing (certain) corpus nodes, CPU load gets and stays high. (#929)
 
