--- a/src/main/resources/release_notes.txt
+++ b/src/main/resources/release_notes.txt
@@ -15,13 +15,32 @@ applicable, related ticket numbers from TRAC are included at the end of the desc
 
 The following functionality has been added to Arbil:
 
-TODO
+- CONTROLLED VOCABULARIES: For controlled vocabularies with distinct values and display
+values (e.g. nl -> Netherlands), both are now shown in the drop down in the editor. (#2283)
 
 ** CHANGES **
 
 These parts of the Arbil functionality have changed:
 
-TODO
+- CMDI PROFILES: Only profiles that have actually been selected get downloaded by 
+default. (#1412)
+
+- CMDI PROFILES: There is now a button on the Templates and Profiles dialogue to refresh
+all selected profiles. (#2185)
+
+- HELP: The help contents have not been updated, using the Arbil manual as its source.
+Help for both IMDI and CMDI usage is available. (#1937)
+
+- IMPORT/EXPORT: The import/export dialogue has been redesigned. (#1684, #1754)
+
+- CONTROLLED VOCABULARIES: When searching for a value by typing, the shortest match
+now gets selected first instead of the first. (#1189)
+
+- TYPECHECKER: A new version of the type checker, which analyses resource files, has been
+included. (#1837)
+
+- ADDING MULTIPLE RESOURCES: When adding multiple resources from the working directories
+to a session or CMDI file, they get processed together rather than one-by-one. (#2205)
 
 ** FIXES **
 
@@ -33,6 +52,15 @@ libraries. (#1431)
 
 - WINDOWS: The 'Templates and Profiles' and 'Edit IMDI Language List' dialog windows
 could grow larger than the available screen space. (#147 and #1584)
+
+- VALIDATION: The IMDI templates have been updated, adding some previously missing
+field constraints. (#1686)
+
+- MULTILINGUAL FIELDS: Starting to edit multilingual fields in CMDI metadata could cause
+the application to freeze for multiple seconds. This has been greatly improved. (#2190)
+
+- EXPORT FILES: It used to be possible that an export directory contained temporary
+files that should not be included. This has been resolved. (#1757)
 
 ** KNOWN ISSUES **
 
