--- a/src/main/java/nl/mpi/arbil/localisation/Menus.properties
+++ b/src/main/java/nl/mpi/arbil/localisation/Menus.properties
@@ -141,7 +141,7 @@ PLUGINLIST\ NOT\ FOUND=PluginList not found
 
 PLUGIN\ ERROR=Plugin Error
 
-COULD\ NOT\ LOAD\ PLUGIN\:\ {0}\\N=Could not load plugin: {0}\\n
+COULD\ NOT\ LOAD\ PLUGIN\:\ {0}=Could not load plugin: {0}\\n
 
 EDIT\ COLUMN\ VIEWS=Edit Column Views
 
@@ -253,3 +253,4 @@ SELECT\ RESOURCE\ FILE=Select Resource File
 
 BROWSE\ FOR\ RESOURCE\ FILE=Browse For Resource File
 ABOUT\ TO\ REPLACE\ ALL\ VALUES\ IN\ COLUMN\ {0}\ WITH\ THE\ VALUE\ {1}(<MULTIPLE\ VALUES>\ WILL\ NOT\ BE\ AFFECTED)=About to replace all values in column \\"{0}\\"\\nwith the value \\"{1}\\"\\n(<multiple values> will not be affected)
+LOGOUT\ ERROR=Logout Error
