refs #2396 Created a module for Internationalisation in Arbil. Moved the strings from the menu system into strings in property files. Added a badly translated local for French.

--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Menus.properties
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Menus.properties
@@ -97,9 +97,9 @@ HIDE\ SELECTED\ COLUMNS=Hide Selected Columns
 
 OPEN\ IN\ LONG\ FIELD\ EDITOR=Open in Long Field Editor
 
-DELETE\ {0}=Delete {0}
+DELETE\ {0}\ X\ {1}=Delete {1} field "{0}"
 
-DELETE\ ATTRIBUTE\ {0}=Delete attribute {0}
+DELETE\ ATTRIBUTE\ {0}\ X\ {1}=Delete {1} attribute "{0}"
 
 ARBIL=Arbil
 
